--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -1,7 +1,8 @@
 name: Email Amazon
 slug: email-amazon
 type: plugin
-version: 0.1.0
+version: 1.0.0-rc.1
+testing: true
 description: Amazon SES integration for new Email plugin
 icon: envelope
 author:
