prepare for release

--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -1,8 +1,8 @@
 name: Email Amazon
 slug: email-amazon
 type: plugin
-version: 1.0.0-rc.3
-testing: true
+version: 1.0.0
+testing: false
 description: Amazon SES integration for new Email plugin
 icon: envelope
 author:
@@ -16,7 +16,7 @@ license: MIT
 
 dependencies:
   - { name: grav, version: '>=1.7.0' }
-  - { name: email, version: '>=4.0.0-rc.1' }
+  - { name: email, version: '>=4.0.0' }
 
 form:
   validation: loose
